# rust-playground

./: Cargo.toml  readme.md  rustfmt.toml
.zed/: settings.json
Refcell的场景/: Cargo.toml  readme.md
Refcell的场景/src/: main.rs
birthday/: Cargo.toml
birthday/src/: main.rs
custom_str_slice/: Cargo.toml
custom_str_slice/src/: main.rs
editor/: Cargo.toml
editor/src/: main.rs
enum_version_or_box/: Cargo.toml
enum_version_or_box/src/: enum_version.rs  main.rs
src/: main.rs  splitStr.rs  take_and_borrow.rs
src/as_ref_and_as_mut/: mod.rs
src/async/: mod.rs  my_future.rs  readme.md
src/borrow_and_ref/: BoxBoxWhy.rs  box_and_rc.rs  cell_or_refcell.rs  mod.rs  readme.md
src/cell/: mod.rs
src/dynamic_size_type/: for_debug.rs  mod.rs  readme.md
src/game/: weapon.rs
src/generic_blanket_impls/: mod.rs
src/hash_typeid_to_box_fn/: mod.rs  scene.rs  scene_day_2.rs  scene_day_3.rs  scene_day_4.rs  test.rs
src/higher_rank_trait_bounds/: mod.rs
src/html_parser/: mod.rs
src/iter_basic/: adapter_code_mode.rs  fibonacci.rs  mod.rs
src/iterator/: readme.md
src/learn_from_pure_words/: mod.rs
src/life_time/: mod.rs  readme.md
src/option/: mod.rs
src/println!/: mod.rs  readme.md
src/ref_keyword_usage/: mod.rs  readme.md
src/result/: mod.rs
src/some_hard/: readme.md
src/std_explain/: readme.md
src/subtype/: function_pointer.rs  mod.rs
src/tests/: option_n_result.rs
src/trait_play/: main.rs  (+1 more)
type_in_dyn_or_static/: Cargo.toml
up_and_down_on_trait/: Cargo.toml
variant_and_phantomdata/: Cargo.toml  readme.md
从泛型中对具体类实现/: Cargo.toml
(+10 files in other folders)
