[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "birthday"
]


[workspace.dependencies]
tokio = {version = "1", features = ["full"]}
regex = "1.10.3"
chrono = "0.4"